fix(MobileMenu): removed is-visible on bigger devices

--- a/src/scss/components/_components.mobilemenu.scss
+++ b/src/scss/components/_components.mobilemenu.scss
@@ -45,3 +45,9 @@
 .MobileMenu.is-visible {
   display: block;
 }
+
+@include breakpoint(md) {
+  .MobileMenu.is-visible {
+    display: none;
+  }
+}
